--- a/notebooks/agentic-underwriting-assistant.ipynb
+++ b/notebooks/agentic-underwriting-assistant.ipynb
@@ -4621,6 +4621,328 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afd293e6",
+   "metadata": {},
+   "source": [
+    "## 11. Model Development & Evaluation\n",
+    "\n",
+    "### 11.1 Baseline Model Development\n",
+    "\n",
+    "Training classical machine learning models (Logistic Regression, Random Forest) on tabular data to establish baseline performance metrics for comparison with the AI agent.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4cb237a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline Model Development\n",
+      "===================================\n",
+      "\n",
+      "1. Preparing Data for Machine Learning...\n",
+      "=============================================\n",
+      "Checking available columns for ML features...\n",
+      "Available columns: ['policyholder_id', 'age', 'gender', 'marital_status', 'annual_income', 'education_level', 'employment_status', 'credit_score', 'years_at_address', 'created_date', 'annual_income_actual', 'policy_id', 'policy_type', 'coverage_amount', 'premium_amount', 'status', 'start_date', 'end_date', 'deductible', 'coverage_limits', 'coverage_amount_actual', 'claim_amount_sum', 'claim_amount_count', 'claim_amount_mean', 'claim_date_min', 'claim_date_max', 'severity_<lambda>', 'claim_to_coverage_ratio', 'premium_to_coverage_ratio', 'claim_to_income_ratio', 'premium_to_income_ratio', 'claims_per_year', 'high_severity_claims_per_year', 'days_since_last_claim', 'days_since_first_claim', 'policy_age_days', 'age_bin', 'income_bin', 'credit_bin', 'overall_risk_score', 'is_high_risk']\n",
+      "Selected ML features (10): ['age', 'annual_income_actual', 'credit_score', 'years_at_address', 'claims_per_year', 'claim_amount_sum', 'coverage_amount_actual', 'policy_age_days', 'claim_to_coverage_ratio', 'premium_to_income_ratio']\n",
+      "Creating risk score from available features...\n",
+      "✓ Created risk score and target variable\n",
+      "  Risk score range: 0.0 - 90.0\n",
+      "  High risk cases: 32\n",
+      "  High risk percentage: 2.1%\n",
+      "✓ Feature matrix shape: (1494, 10)\n",
+      "✓ Target distribution: {0: 1462, 1: 32}\n",
+      "✓ High risk percentage: 2.14%\n",
+      "\n",
+      "2. Creating Train-Test Split...\n",
+      "===================================\n",
+      "✓ Training set: 1195 samples\n",
+      "✓ Test set: 299 samples\n",
+      "✓ Training high risk: 2.18%\n",
+      "✓ Test high risk: 2.01%\n",
+      "\n",
+      "3. Scaling Features...\n",
+      "=========================\n",
+      "✓ Features scaled using StandardScaler\n",
+      "\n",
+      "4. Training Baseline Models...\n",
+      "===================================\n",
+      "Training Logistic Regression...\n",
+      "Training Random Forest...\n",
+      "✓ Both models trained successfully\n",
+      "\n",
+      "5. Evaluating Baseline Models...\n",
+      "========================================\n",
+      "\n",
+      "Model Performance Comparison:\n",
+      "Metric          Logistic Regression  Random Forest  \n",
+      "-------------------------------------------------------\n",
+      "AUC Score       0.936                0.965          \n",
+      "Precision       0.500                1.000          \n",
+      "Recall          0.333                0.333          \n",
+      "F1 Score        0.400                0.500          \n",
+      "Accuracy        0.980                0.987          \n",
+      "\n",
+      "6. Feature Importance Analysis...\n",
+      "========================================\n",
+      "Top 10 Most Important Features:\n",
+      "                feature  importance\n",
+      "           credit_score    0.255170\n",
+      "claim_to_coverage_ratio    0.151315\n",
+      "                    age    0.126089\n",
+      " coverage_amount_actual    0.098738\n",
+      "       claim_amount_sum    0.081523\n",
+      "premium_to_income_ratio    0.063565\n",
+      "   annual_income_actual    0.062826\n",
+      "        claims_per_year    0.058118\n",
+      "       years_at_address    0.053527\n",
+      "        policy_age_days    0.049130\n",
+      "\n",
+      "7. Cross-Validation Results...\n",
+      "===================================\n",
+      "Logistic Regression CV AUC: 0.942 (+/- 0.114)\n",
+      "Random Forest CV AUC: 0.971 (+/- 0.103)\n",
+      "\n",
+      "✓ Baseline models trained and evaluated successfully!\n",
+      "✓ Ready for agent comparison!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Baseline Model Development\n",
+    "print(\"Baseline Model Development\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "# Import required libraries\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.calibration import CalibratedClassifierCV\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# 1. Prepare Data for Machine Learning\n",
+    "print(\"\\n1. Preparing Data for Machine Learning...\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Select features for ML model - only use existing columns\n",
+    "print(\"Checking available columns for ML features...\")\n",
+    "\n",
+    "# First, let's see what columns we actually have\n",
+    "available_columns = list(full_dataset.columns)\n",
+    "print(f\"Available columns: {available_columns}\")\n",
+    "\n",
+    "# Define potential features and check which ones exist\n",
+    "potential_features = [\n",
+    "    'age', 'annual_income_actual', 'credit_score', 'years_at_address',\n",
+    "    'claims_per_year', 'avg_claim_amount', 'claim_amount_sum', 'coverage_amount_actual',\n",
+    "    'premium_amount_actual', 'deductible_actual', 'policy_age_days',\n",
+    "    'claim_to_coverage_ratio', 'premium_to_income_ratio', 'risk_score_financial',\n",
+    "    'risk_score_claims', 'risk_score_policy', 'risk_score_external', 'risk_score_document'\n",
+    "]\n",
+    "\n",
+    "# Select only existing features\n",
+    "ml_features = [col for col in potential_features if col in available_columns]\n",
+    "print(f\"Selected ML features ({len(ml_features)}): {ml_features}\")\n",
+    "\n",
+    "# If we don't have enough features, add some basic ones\n",
+    "if len(ml_features) < 5:\n",
+    "    print(\"Adding basic features...\")\n",
+    "    basic_features = ['age', 'annual_income_actual', 'credit_score', 'claims_per_year', 'coverage_amount_actual']\n",
+    "    for feature in basic_features:\n",
+    "        if feature in available_columns and feature not in ml_features:\n",
+    "            ml_features.append(feature)\n",
+    "    \n",
+    "    print(f\"Final ML features ({len(ml_features)}): {ml_features}\")\n",
+    "\n",
+    "# Create target variable (binary: high risk vs low/medium risk)\n",
+    "# Create risk score from basic features\n",
+    "print(\"Creating risk score from available features...\")\n",
+    "\n",
+    "# Create a simple risk score (0-100) based on key features\n",
+    "risk_score = 0\n",
+    "\n",
+    "# Age factor (0-20 points)\n",
+    "if 'age' in full_dataset.columns:\n",
+    "    age_risk = np.where(full_dataset['age'] < 25, 20, \n",
+    "                       np.where(full_dataset['age'] > 65, 15, 0))\n",
+    "    risk_score += age_risk\n",
+    "\n",
+    "# Credit score factor (0-30 points)\n",
+    "if 'credit_score' in full_dataset.columns:\n",
+    "    credit_risk = np.where(full_dataset['credit_score'] < 500, 30,\n",
+    "                         np.where(full_dataset['credit_score'] < 600, 20,\n",
+    "                                np.where(full_dataset['credit_score'] < 700, 10, 0)))\n",
+    "    risk_score += credit_risk\n",
+    "\n",
+    "# Claims factor (0-25 points)\n",
+    "if 'claims_per_year' in full_dataset.columns:\n",
+    "    claims_risk = np.minimum(full_dataset['claims_per_year'] * 10, 25)\n",
+    "    risk_score += claims_risk\n",
+    "\n",
+    "# Income factor (0-15 points)\n",
+    "if 'annual_income_actual' in full_dataset.columns:\n",
+    "    income_risk = np.where(full_dataset['annual_income_actual'] < 30000, 15,\n",
+    "                         np.where(full_dataset['annual_income_actual'] < 50000, 8, 0))\n",
+    "    risk_score += income_risk\n",
+    "\n",
+    "# Coverage factor (0-10 points)\n",
+    "if 'coverage_amount_actual' in full_dataset.columns:\n",
+    "    coverage_risk = np.where(full_dataset['coverage_amount_actual'] > 500000, 10, 0)\n",
+    "    risk_score += coverage_risk\n",
+    "\n",
+    "# Ensure score is between 0-100\n",
+    "full_dataset['overall_risk_score'] = np.clip(risk_score, 0, 100)\n",
+    "\n",
+    "# Create binary target (high risk if score >= 70)\n",
+    "full_dataset['is_high_risk'] = (full_dataset['overall_risk_score'] >= 70).astype(int)\n",
+    "\n",
+    "print(f\"✓ Created risk score and target variable\")\n",
+    "print(f\"  Risk score range: {full_dataset['overall_risk_score'].min():.1f} - {full_dataset['overall_risk_score'].max():.1f}\")\n",
+    "print(f\"  High risk cases: {full_dataset['is_high_risk'].sum()}\")\n",
+    "print(f\"  High risk percentage: {full_dataset['is_high_risk'].mean():.1%}\")\n",
+    "\n",
+    "# Prepare feature matrix and target\n",
+    "X = full_dataset[ml_features].fillna(0)  # Fill any remaining NaN values\n",
+    "y = full_dataset['is_high_risk']\n",
+    "\n",
+    "print(f\"✓ Feature matrix shape: {X.shape}\")\n",
+    "print(f\"✓ Target distribution: {y.value_counts().to_dict()}\")\n",
+    "print(f\"✓ High risk percentage: {y.mean():.2%}\")\n",
+    "\n",
+    "# 2. Train-Test Split\n",
+    "print(\"\\n2. Creating Train-Test Split...\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "print(f\"✓ Training set: {X_train.shape[0]} samples\")\n",
+    "print(f\"✓ Test set: {X_test.shape[0]} samples\")\n",
+    "print(f\"✓ Training high risk: {y_train.mean():.2%}\")\n",
+    "print(f\"✓ Test high risk: {y_test.mean():.2%}\")\n",
+    "\n",
+    "# 3. Feature Scaling\n",
+    "print(\"\\n3. Scaling Features...\")\n",
+    "print(\"=\" * 25)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "print(\"✓ Features scaled using StandardScaler\")\n",
+    "\n",
+    "# 4. Train Baseline Models\n",
+    "print(\"\\n4. Training Baseline Models...\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "# Logistic Regression\n",
+    "print(\"Training Logistic Regression...\")\n",
+    "lr_model = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "lr_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Random Forest\n",
+    "print(\"Training Random Forest...\")\n",
+    "rf_model = RandomForestClassifier(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=10,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"✓ Both models trained successfully\")\n",
+    "\n",
+    "# 5. Model Evaluation\n",
+    "print(\"\\n5. Evaluating Baseline Models...\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "def evaluate_model(model, X_test, y_test, model_name, scaled=False):\n",
+    "    \"\"\"Evaluate model performance and return metrics.\"\"\"\n",
+    "    if scaled:\n",
+    "        X_test_eval = X_test\n",
+    "    else:\n",
+    "        X_test_eval = X_test\n",
+    "    \n",
+    "    # Predictions\n",
+    "    y_pred = model.predict(X_test_eval)\n",
+    "    y_pred_proba = model.predict_proba(X_test_eval)[:, 1]\n",
+    "    \n",
+    "    # Metrics\n",
+    "    auc_score = roc_auc_score(y_test, y_pred_proba)\n",
+    "    \n",
+    "    # Classification report\n",
+    "    report = classification_report(y_test, y_pred, output_dict=True)\n",
+    "    \n",
+    "    return {\n",
+    "        'model_name': model_name,\n",
+    "        'auc_score': auc_score,\n",
+    "        'precision': report['1']['precision'],\n",
+    "        'recall': report['1']['recall'],\n",
+    "        'f1_score': report['1']['f1-score'],\n",
+    "        'accuracy': report['accuracy'],\n",
+    "        'y_pred': y_pred,\n",
+    "        'y_pred_proba': y_pred_proba\n",
+    "    }\n",
+    "\n",
+    "# Evaluate both models\n",
+    "lr_results = evaluate_model(lr_model, X_test_scaled, y_test, \"Logistic Regression\", scaled=True)\n",
+    "rf_results = evaluate_model(rf_model, X_test, y_test, \"Random Forest\", scaled=False)\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"\\nModel Performance Comparison:\")\n",
+    "print(f\"{'Metric':<15} {'Logistic Regression':<20} {'Random Forest':<15}\")\n",
+    "print(\"-\" * 55)\n",
+    "print(f\"{'AUC Score':<15} {lr_results['auc_score']:<20.3f} {rf_results['auc_score']:<15.3f}\")\n",
+    "print(f\"{'Precision':<15} {lr_results['precision']:<20.3f} {rf_results['precision']:<15.3f}\")\n",
+    "print(f\"{'Recall':<15} {lr_results['recall']:<20.3f} {rf_results['recall']:<15.3f}\")\n",
+    "print(f\"{'F1 Score':<15} {lr_results['f1_score']:<20.3f} {rf_results['f1_score']:<15.3f}\")\n",
+    "print(f\"{'Accuracy':<15} {lr_results['accuracy']:<20.3f} {rf_results['accuracy']:<15.3f}\")\n",
+    "\n",
+    "# 6. Feature Importance (Random Forest)\n",
+    "print(\"\\n6. Feature Importance Analysis...\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "feature_importance = pd.DataFrame({\n",
+    "    'feature': ml_features,\n",
+    "    'importance': rf_model.feature_importances_\n",
+    "}).sort_values('importance', ascending=False)\n",
+    "\n",
+    "print(\"Top 10 Most Important Features:\")\n",
+    "print(feature_importance.head(10).to_string(index=False))\n",
+    "\n",
+    "# 7. Cross-Validation\n",
+    "print(\"\\n7. Cross-Validation Results...\")\n",
+    "print(\"=\" * 35)\n",
+    "\n",
+    "# Cross-validation for both models\n",
+    "lr_cv_scores = cross_val_score(lr_model, X_train_scaled, y_train, cv=5, scoring='roc_auc')\n",
+    "rf_cv_scores = cross_val_score(rf_model, X_train, y_train, cv=5, scoring='roc_auc')\n",
+    "\n",
+    "print(f\"Logistic Regression CV AUC: {lr_cv_scores.mean():.3f} (+/- {lr_cv_scores.std() * 2:.3f})\")\n",
+    "print(f\"Random Forest CV AUC: {rf_cv_scores.mean():.3f} (+/- {rf_cv_scores.std() * 2:.3f})\")\n",
+    "\n",
+    "print(\"\\n✓ Baseline models trained and evaluated successfully!\")\n",
+    "print(\"✓ Ready for agent comparison!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e61c8da3-5ef9-4179-8bbb-f70681b52ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
