--- a/notebooks/agentic-underwriting-assistant.ipynb
+++ b/notebooks/agentic-underwriting-assistant.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Agentic Underwriting Assistant\n",
     "\n",
-    "## Data Exploration and Analysis\n",
+    "## 1. Data Exploration and Analysis\n",
     "\n",
     "First, we explore the datasets for the underwriting system. We'll examine policyholder demographics, claims history, policy details, and document corpus to understand the data structure and identify key patterns for risk assessment."
    ]
@@ -91,7 +91,7 @@
    "id": "4c55cfbf",
    "metadata": {},
    "source": [
-    "## 1. Policyholder Demographics Analysis\n",
+    "## 1.1. Policyholder Demographics Analysis\n",
     "\n",
     "Analyze the demographic characteristics of policyholders including age, gender, income, education, employment status, and credit scores. This section provides insights into the customer base and potential risk factors.\n"
    ]
@@ -509,7 +509,7 @@
    "id": "94e40320",
    "metadata": {},
    "source": [
-    "## 2. Claims Analysis\n",
+    "## 1.2. Claims Analysis\n",
     "\n",
     "Examine historical claims data including claim amounts, types, severity levels, and status. This analysis helps identify patterns in claims behavior and assess risk factors associated with different types of claims.\n"
    ]
@@ -732,7 +732,7 @@
    "id": "84b3a38a",
    "metadata": {},
    "source": [
-    "## 3. Policy Details Analysis\n",
+    "## 1.3. Policy Details Analysis\n",
     "\n",
     "Review policy information including coverage amounts, premium calculations, deductibles, and policy types. This section analyzes the relationship between policy characteristics and risk factors.\n"
    ]
@@ -958,7 +958,7 @@
    "id": "0f58bb14",
    "metadata": {},
    "source": [
-    "## 4. Document Corpus Analysis\n",
+    "## 1.4. Document Corpus Analysis\n",
     "\n",
     "Explore the document corpus containing underwriting guidelines, case studies, and risk assessment methodologies. This corpus will be used for the RAG (Retrieval Augmented Generation) system to provide contextual information for risk scoring.\n"
    ]
@@ -1032,7 +1032,7 @@
    "id": "58de5eb3",
    "metadata": {},
    "source": [
-    "## 5. Data Quality and Missing Values\n",
+    "## 1.5. Data Quality and Missing Values\n",
     "\n",
     "Assess data quality by checking for missing values, data types, and overall data integrity. This section ensures the datasets are clean and ready for feature engineering and model development.\n"
    ]
@@ -1130,7 +1130,7 @@
    "id": "512fb1d4",
    "metadata": {},
    "source": [
-    "## 6. Key Insights and Summary\n",
+    "## 1.6. Key Insights and Summary\n",
     "\n",
     "Synthesize findings from the data exploration to identify key risk factors, correlations, and patterns. This summary provides actionable insights for building the underwriting risk assessment system.\n"
    ]
@@ -1217,7 +1217,7 @@
    "id": "4f85ecf5",
    "metadata": {},
    "source": [
-    "## 7. Data Cleaning and Preprocessing\n",
+    "## 1.7. Data Cleaning and Preprocessing\n",
     "\n",
     "Clean and preprocess the datasets to ensure data quality and consistency. This section addresses missing values, normalizes date/time fields, standardizes monetary units, and cleans document text for optimal performance in the RAG system.\n"
    ]
@@ -1318,7 +1318,7 @@
    "id": "692865ce",
    "metadata": {},
    "source": [
-    "### 7.1 Date and Time Normalization\n"
+    "### 1.7.1. Date and Time Normalization\n"
    ]
   },
   {
@@ -1385,7 +1385,7 @@
    "id": "1c417d22",
    "metadata": {},
    "source": [
-    "### 7.2 Monetary Units Standardization\n"
+    "### 1.7.2. Monetary Units Standardization\n"
    ]
   },
   {
@@ -1444,7 +1444,7 @@
    "id": "3be6bb5f",
    "metadata": {},
    "source": [
-    "### 7.3 Document Text Cleaning and Normalization\n"
+    "### 1.7.3. Document Text Cleaning and Normalization\n"
    ]
   },
   {
@@ -1541,7 +1541,7 @@
    "id": "b38a2f58",
    "metadata": {},
    "source": [
-    "### 7.4 Data Quality Visualizations\n"
+    "### 1.7.4. Data Quality Visualizations\n"
    ]
   },
   {
@@ -1635,7 +1635,7 @@
    "id": "04588b33",
    "metadata": {},
    "source": [
-    "### 7.5 Sample Documents for Retrieval\n"
+    "### 1.7.5. Sample Documents for Retrieval\n"
    ]
   },
   {
@@ -1708,7 +1708,7 @@
    "id": "4b94eaa1",
    "metadata": {},
    "source": [
-    "### 7.6 Data Cleaning Summary and Observations\n"
+    "### 1.7.6. Data Cleaning Summary and Observations\n"
    ]
   },
   {
@@ -1838,7 +1838,7 @@
    "id": "5fa454a5",
    "metadata": {},
    "source": [
-    "## 8. Data Transformation and Normalization Analysis\n",
+    "## 1.8. Data Transformation and Normalization Analysis\n",
     "\n",
     "Analyze the need for logarithmic transformation and normalization of numerical variables. This section examines the distribution of key variables and determines the appropriate transformation methods for better model performance.\n"
    ]
@@ -2174,7 +2174,7 @@
    "id": "c4ae9f34",
    "metadata": {},
    "source": [
-    "## 9. Feature Engineering & Deterministic Tools\n",
+    "## 2. Feature Engineering & Deterministic Tools\n",
     "\n",
     "Create engineered features from raw data and implement deterministic tools for risk assessment. This section focuses on creating meaningful features, ratios, temporal indicators, and implementing business rules for automated risk evaluation.\n"
    ]
@@ -2184,7 +2184,7 @@
    "id": "bec94d70",
    "metadata": {},
    "source": [
-    "### 9.1 Tabular Features Creation\n"
+    "### 2.1. Tabular Features Creation\n"
    ]
   },
   {
@@ -2456,7 +2456,7 @@
    "id": "50d92d62-ce63-4afd-8b36-13cd1716626d",
    "metadata": {},
    "source": [
-    "### 9.2 Deterministic Tool A - Risk Calculator"
+    "### 2.2. Deterministic Tool A - Risk Calculator"
    ]
   },
   {
@@ -2680,7 +2680,7 @@
    "id": "159892cb-5155-47ff-963f-e3e4261cced0",
    "metadata": {},
    "source": [
-    "### 9.3 Deterministic Tool B - Rule Checker\n",
+    "### 2.3. Deterministic Tool B - Rule Checker\n",
     "\n",
     "Implement business rules that return binary flags and suggested actions for policy compliance and risk management.\n"
    ]
@@ -3063,7 +3063,7 @@
    "id": "9e514ea7",
    "metadata": {},
    "source": [
-    "## 10. RAG System and Local LLM Integration\n",
+    "## 3. RAG System and Local LLM Integration\n",
     "\n",
     "Build a Retrieval Augmented Generation (RAG) system with local LLM integration for intelligent underwriting assistance. This section implements document retrieval, vector embeddings, and agent orchestration for automated risk assessment.\n"
    ]
@@ -3073,7 +3073,7 @@
    "id": "deb968d8",
    "metadata": {},
    "source": [
-    "### 10.1 Document Embeddings and Vector Store Setup\n"
+    "### 3.1. Document Embeddings and Vector Store Setup\n"
    ]
   },
   {
@@ -3313,7 +3313,7 @@
    "id": "489345de",
    "metadata": {},
    "source": [
-    "### 10.2 Local LLM"
+    "### 3.2. Local LLM"
    ]
   },
   {
@@ -3688,7 +3688,7 @@
    "id": "eeb5c992-9563-4281-9583-a26944d33039",
    "metadata": {},
    "source": [
-    "### 10.3 Agent Orchestration and Tool Integration\n"
+    "### 3.3. Agent Orchestration and Tool Integration\n"
    ]
   },
   {
@@ -4077,21 +4077,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99f57901-5eb9-4d60-9c0a-3ba217bb2533",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "afd293e6",
    "metadata": {},
    "source": [
-    "## 11. Model Development & Evaluation\n",
+    "## 4. Model Development & Evaluation\n",
     "\n",
-    "### 11.1 Baseline Model Development\n",
+    "### 4.1. Baseline Model Development\n",
     "\n",
     "Training classical machine learning models (Logistic Regression, Random Forest) on tabular data to establish baseline performance metrics for comparison with the AI agent.\n"
    ]
@@ -4421,7 +4413,7 @@
    "id": "423b881b-5541-4878-a5b4-4a83923ca241",
    "metadata": {},
    "source": [
-    "### 11.2 Agent Evaluation\n",
+    "### 4.2. Agent Evaluation\n",
     "\n",
     "Running the AI agent on held-out test cases and comparing its performance with baseline models. Evaluating agreement, false positive/negative rates, and hallucination detection.\n"
    ]
